# openclaw-manager

./: .gitignore  AGENTS.md  README.md  RELEASE.md  announcement.json  package.json
.github/workflows/: build-macos.yml  build-windows.yml  release.yml
scripts/: prepare-windows-offline-assets.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/offline/windows/: README.md
src-tauri/src/: main.rs
src-tauri/src/commands/: config.rs  installer.rs
src-tauri/src/utils/: shell.rs
src/components/AIConfig/: index.tsx
src/components/Agents/: index.tsx
src/components/Channels/: index.tsx
src/components/Dashboard/: QuickActions.tsx  StatusCard.tsx  SystemInfo.tsx
src/components/Layout/: Header.tsx  Sidebar.tsx
src/components/Logs/: index.tsx
src/components/MCP/: index.tsx
src/components/Service/: index.tsx
src/components/Settings/: index.tsx
src/components/Setup/: index.tsx
src/components/Skills/: index.tsx
src/components/Testing/: index.tsx
