[package]
name = "openclaw-manager"
version = "0.0.19"
description = "OpenClaw小白安装工具"
authors = ["使用问题关注公众号：AI芯实战 | 联系方式：微信 yunqi31"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
serde_yaml = "0.9"
regex = "1"
once_cell = "1"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
